Updated leftover scripts to use `user:user` for authentication.

--- a/floppy/bitvisessh.cfg
+++ b/floppy/bitvisessh.cfg
@@ -317,7 +317,7 @@ With access {
     With New {
       winAccountType localAccount
       winDomain ""
-      winAccount "vagrant"
+      winAccount "user"
       specifyGroup true
       groupType everyone
       group ""
